Add wineditline build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ else()
 endif()
 
 set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/../install")
+add_subdirectory (${CMAKE_SOURCE_DIR}/../external/wineditline ${CMAKE_CURRENT_BINARY_DIR}/external/wineditline)
 add_subdirectory (${CMAKE_SOURCE_DIR}/../pcl ${CMAKE_CURRENT_BINARY_DIR}/pcl)
 add_subdirectory (${CMAKE_SOURCE_DIR}/../morphylib ${CMAKE_CURRENT_BINARY_DIR}/morphyLib)
 add_subdirectory (${CMAKE_SOURCE_DIR}/../PAWM ${CMAKE_CURRENT_BINARY_DIR}/PAWM)
