updated CMake files for new mpl library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmakemodules")
 
 # Find gsl, libedit, and ncl
 if (NOT MSVC)
-    FIND_PACKAGE(Libedit REQUIRED)
+    FIND_PACKAGE(libedit REQUIRED)
 endif()
 FIND_PACKAGE(Ncl REQUIRED)
-FIND_PACKAGE(R)
+#FIND_PACKAGE(R)
 
 # Crank up the warning levels
 if(MSVC)
@@ -38,8 +38,6 @@ set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/../install")
 if (MSVC)
     add_subdirectory (${CMAKE_SOURCE_DIR}/../external/wineditline ${CMAKE_CURRENT_BINARY_DIR}/external/wineditline)
 endif()
-add_subdirectory (${CMAKE_SOURCE_DIR}/../pcl ${CMAKE_CURRENT_BINARY_DIR}/pcl)
-add_subdirectory (${CMAKE_SOURCE_DIR}/../morphylib ${CMAKE_CURRENT_BINARY_DIR}/morphyLib)
-add_subdirectory (${CMAKE_SOURCE_DIR}/../PAWM ${CMAKE_CURRENT_BINARY_DIR}/PAWM)
+add_subdirectory (${CMAKE_SOURCE_DIR}/../mpl ${CMAKE_CURRENT_BINARY_DIR}/mpl)
 add_subdirectory (${CMAKE_SOURCE_DIR}/../nui ${CMAKE_CURRENT_BINARY_DIR}/nui)
 
