restored mkdir for bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: c
+language: 
+  - c
+  - cpp
 
 os: 
   - windows
@@ -9,8 +11,6 @@ compiler:
   - clang
 
 install:
-  - mkdir ~/bin
-  - PATH=~/bin:$PATH
   - curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
   - chmod a+x ~/bin/repo
   - cd ${TRAVIS_BUILD_DIR}
