restore mkdir bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ os:
   - osx
 
 install:
+  - mkdir ~/bin
+  - PATH=~/bin:$PATH
   - curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
   - chmod a+x ~/bin/repo
   - cd ${TRAVIS_BUILD_DIR}
