--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - cd build
   - cmake ..
   - make install
+  - cd ${TRAVIS_BUILD_DIR}
   - mkdir external
   - cd external
   - git clone https://github.com/cdesjardins/wineditline.git
