--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ install:
   - git clone  https://github.com/mbrazeau/build.git
   - git clone https://github.com/cdesjardins/ncl.git
   - cd ncl
+  - sh bootstrap.sh
   - mkdir build
   - cd build
-  - cmake ..
+  - ../v2.1/configure
+  - make
   - make install
   - cd ${TRAVIS_BUILD_DIR}
   - mkdir external
