--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ install:
   - git clone -b dev https://github.com/mbrazeau/nui.git
   - git clone  https://github.com/mbrazeau/build.git
   - git clone https://github.com/cdesjardins/ncl_mtholder.git
-  - mkdir ncl 
-  - mv ncl_mtholder ncl
+  - mv ncl_mtholder ./ncl
   - cd ncl
   - mkdir build
   - cd build
