--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ matrix:
                 - libedit
           env:
             - PKG_CONFIG_PATH="/usr/local/opt/libedit/lib/pkgconfig"
-              #        - os: windows
+
+        - os: windows
 
 
 install:
