--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,7 @@ script:
   - mkdir build
   - cmake .
   - make
-  - ls
-  - pwd
-  - cd nui
-  - ./nui < quit
+  - cat run.txt | .nui/nui
 
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
