--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ install:
   - mkdir build
   - cd build
   - cmake ..
-  - make
-  - make install
+  - MAKE
+  - MAKE install
   - cd ${TRAVIS_BUILD_DIR}
   - mkdir external
   - cd external
@@ -40,7 +40,7 @@ script:
   - cd build
   - mkdir build
   - cmake .
-  - make
+  - MAKE
   - cat run.txt | ./build/nui/nui
 
 after_success:
