--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
   - pwd
   - ls .
   - ls ..
-  - cat run.txt | ./build/nui/nui
+  - cat run.txt | ./nui/nui
 
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
