--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ install:
   - mkdir build
   - cd build
   - cmake ..
-  - MAKE
-  - MAKE install
+  - cmake --build . --target install
   - cd ${TRAVIS_BUILD_DIR}
   - mkdir external
   - cd external
