fixed paths to run file and bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
   - pwd
   - ls .
   - ls ..
-  - cat ../run.txt | ./nui/nui
+  - cat run.txt | ../nui/nui
 
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
