--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ install:
 
 script:
   - cd ${TRAVIS_BUILD_DIR}
-    mkdir build
-    cd build
+  - mkdir build
+  - cd build
   - cmake ..
   - cmake --build .
   - pwd
