--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,22 @@ matrix:
                 - libedit
           env:
             - PKG_CONFIG_PATH="/usr/local/opt/libedit/lib/pkgconfig"
+          script:
+            - cd ${TRAVIS_BUILD_DIR}
+            - mkdir build
+            - cd build
+            - cmake ..
+            - cmake --build .
+            - cat ../run.txt | ./nui/nui
 
         - os: windows
-
+          script:
+            - cd ${TRAVIS_BUILD_DIR}
+            - mkdir build
+            - cd build
+            - cmake -G "Visual Studio 16 2019" ..
+            - cmake --build .
+            - cat ../run.txt | ./nui/nui
 install:
   - cd ..
   - git clone -b development https://github.com/mbrazeau/mpl.git
@@ -29,17 +42,6 @@ install:
   - mkdir external
   - cd external
   - git clone https://github.com/cdesjardins/wineditline.git
-
-script:
-  - cd ${TRAVIS_BUILD_DIR}
-  - mkdir build
-  - cd build
-  - cmake ..
-  - cmake --build .
-  - pwd
-  - ls .
-  - ls ..
-  - cat ../run.txt | ./nui/nui
 
 after_success:
   - cd ${TRAVIS_BUILD_DIR}
